typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName28.ts.stderr
error: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName28.ts:3:5
  |
3 |     [e]: number = 0;
  |     ^^^^^^^^^^^^^^^^

error: UndefinedSymbol {
    sym: Atom('e' type=inline),
    span: Span {
        lo: BytePos(
            32,
        ),
        hi: BytePos(
            33,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName28.ts:3:6
  |
3 |     [e]: number = 0;
  |      ^

error: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName28.ts:4:5
  |
4 |     [e2]: number
  |     ^^^^^^^^^^^^

error: UndefinedSymbol {
    sym: Atom('e2' type=inline),
    span: Span {
        lo: BytePos(
            54,
        ),
        hi: BytePos(
            56,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName28.ts:4:6
  |
4 |     [e2]: number
  |      ^^

